# raspbernetes

./: .ansible-hosts  .ansible-lint  .gitignore  .pre-commit-config.yaml  .ssh-pass  .vault-pass  404.md  CNAME  LICENSE  Makefile  README.md  ansible.cfg  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ansible-lint.yml  pythonpackage.yml  repo-healthcheck.yml
ansible/: ansible.cfg
ansible/bootstrap/: main.yml
ansible/playbooks/: ansible.cfg  hosts
ansible/playbooks/bootstrap/: .vault-pass  README.md  site.yml
ansible/playbooks/bootstrap/inventories/: hosts
ansible/playbooks/bootstrap/vars/: ansible.yml
ansible/playbooks/debug/: site.yml
ansible/playbooks/security/: README.md  site.yml
ansible/playbooks/security/vars/: ansible.yml  unsecure.yml
ansible/playbooks/vanilla_pi/: README.md  site.yml
ansible/roles/bootstrap/files/: boot-firmware-config.txt
ansible/roles/bootstrap/handlers/: main.yml
ansible/roles/bootstrap/tasks/: main.yml  setup_boot_config.yml  setup_cgroup.yml  setup_gpu.yml  setup_network.yml  setup_poe.yml  setup_security.yml  setup_ssh.yml  setup_swap.yml  setup_usb.yml  setup_users.yml
ansible/roles/bootstrap/vars/: main.yml
ansible/roles/debug/tasks/: main.yml
ansible/roles/security/tasks/: setup_security.yml
ansible/roles/security/vars/: main.yml
ansible/roles/vanilla/tasks/: main.yml
bootstrap/: inventory  main.yml
bootstrap/templates/: hosts.j2
docs/: BOM.md
playbooks/debug/: site.yml
playbooks/debug/vars/: raspbian.yml  ubuntu_unsecure.yml
roles/debug/tasks/: main.yml
roles/debug/vars/: main.yml
unlinted/playbooks/: ansible.cfg
unlinted/playbooks/bootstrap/: requirements.yml  site.yml
unlinted/playbooks/bootstrap/vars/: netplan.yml  secure.yml
unlinted/playbooks/security/: README.md  site.yml
unlinted/playbooks/vanilla_pi/: README.md  site.yml
unlinted/roles/bootstrap/files/: boot-firmware-config.txt
unlinted/roles/bootstrap/handlers/: main.yml
unlinted/roles/bootstrap/tasks/: main.yml  setup_boot_config.yml  setup_cgroup.yml  setup_gpu.yml  (+4 more)
(+9 files in other folders)
