[tool.poetry]
name = "raspbernetes"
version = "0.1.0"
description = "Manage Kubernetes on a Raspberry Pi cluster"
authors = ["Lee Myring <mail@thinkstack.io>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
ansible = "2.9.12"
jinja2 = "^2.11"
paramiko = "^2.7"
python = "^3.8"
pyyaml = "*"

[tool.poetry.dev-dependencies]
bandit = "*"
black = "19.10b0"
flake8 = "*"
pre-commit = "^2.8.1"
pytest = "^6.0.1"
pytest-cov = "^2.9.0"
pytest-pycodestyle = "^2.0.0"
pytest-black = "^0.3.8"
reorder-python-imports = "^2.3.0"
safety = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
