[tool.poetry]
name = "raspbernetes"
version = "1.0.0"
description = "Manage Kubernetes on a Raspberry Pi cluster"
authors = ["Lee Myring <mail@thinkstack.io>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
ansible = "2.10.6"
jinja2 = "3.0.1"
paramiko = "2.7.2"
python = "3.8.3"
pyyaml = "5.4.1"

[tool.poetry.dev-dependencies]
bandit = "*"
black = "20.8b1"
flake8 = "*"
pre-commit = "^2.10.0"
pytest = "^6.2.2"
pytest-cov = "^2.11.1"
pytest-pycodestyle = "^2.2.0"
pytest-black = "^0.3.12"
reorder-python-imports = "^2.3.6"
safety = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
