[tool.poetry]
name = "raspbernetes"
version = "1.0.0"
description = "Manage Kubernetes on Raspberry Pi 4 & Turing Pi 2 CM4 clusters"
authors = ["Lee Myring <mail@thinkstack.io>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "3.9.16"

[tool.poetry.group.dev.dependencies]
ansible = "^8.3.0"
jinja2 = "^3.1.2"
paramiko = "^3.2.0"
pyyaml = "^6.0"
bandit = "^1.7.5"
black = "^23.3.0"
flake8 = "^6.0.0"
pre-commit = "^3.3.2"
pytest = "^7.3.1"
pytest-cov = "^4.1.0"
pytest-pycodestyle = "^2.3.1"
pytest-black = "^0.3.12"
reorder-python-imports = "^3.9.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
